crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__add_bound_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/add_bound_method.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `BoundMethod`, but rhs has type `Number`
   ╭─[tests/cases/add_bound_method.lox:6:1]
   │
 6 │ f + 42;
   │ ┬ ┬ ─┬  
   │ │ │  ╰── this is of type `Number`
   │ │ │     
   │ │ ╰───── the operator in question
   │ │       
   │ ╰─────── this is of type `BoundMethod`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
