crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__assign_to_global_variable_in_function_defined_after_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/assign_to_global_variable_in_function_defined_after_function.lox
---
success: true
exit_code: 0
----- stdout -----
27
nil
42

----- stderr -----
