crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__compare_different_functions.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/compare_different_functions.lox
---
success: true
exit_code: 0
----- stdout -----
<function function at [POINTER]>
<function function at [POINTER]>
true
true
false

----- stderr -----
