crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__error_around_multibyte_char.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/error_around_multibyte_char.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `ündėfınēð`.
   ╭─[tests/cases/error_around_multibyte_char.lox:1:9]
   │
 1 │ var x = ündėfınēð + 42;
   │         ─────────  
───╯
