crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__error_in_unary_operator.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/error_in_unary_operator.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in unary operator `-`: operand has type `Nil` but `-` requires type `Number`
   ╭─[tests/cases/error_in_unary_operator.lox:1:2]
   │
 1 │ --nil;
   │  ┬─┬─  
   │  │ ╰─── this is of type `Nil`
   │  │     
   │  ╰───── the operator in question
   │ 
   │ Help: operator `-` can only be applied to numbers
───╯
