crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__fall_off_end_of_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/fall_off_end_of_function.lox
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
